--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/express-handlebars": "^6.0.0",
+    "@types/firebase": "^3.2.1",
     "nodemon": "^3.0.3",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
@@ -21,6 +22,9 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "firebase": "^10.8.0",
+    "firebase-admin": "^12.0.0",
+    "firebase-auth": "^0.1.2",
     "socket.io": "^4.7.4"
   }
 }
