--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/express": "^4.17.21",
     "@types/express-handlebars": "^6.0.0",
     "@types/firebase": "^3.2.1",
+    "@types/socket.io": "^3.0.2",
     "nodemon": "^3.0.3",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
